# agent_demo

./: .env.example  .gitignore  README.md  docker-compose.yml  litellm_config.yaml  main.py  pyproject.toml
agent_demo/: __init__.py  config.py  kill_switch.py  llm.py  runner.py
agent_demo/agents/faq_agent/: config.py  prompts.py  spec.py  state.py  tools.py
agent_demo/agents/house_search/: config.py  prompts.py  spec.py  state.py
agent_demo/agents/house_search/tools/: memory_tools.py  postgres_tools.py
agent_demo/graph/: graph.py  prompts.py  state.py
agent_demo/lib/: mcp_tools.py
agent_demo/lib/memory/: factual.py  long_term.py  short_term.py
agent_demo/memory/: factual.py  long_term.py  short_term.py
agent_demo/platform/: budget.py  config.py  envelope.py  graph_factory.py  harness.py  hitl.py  kill_switch.py  llm.py  mongo.py  registry.py  spec.py  state.py  tracing.py
agent_demo/tools/: mcp_tools.py  memory_tools.py  postgres_tools.py
agent_demo/tracing/: setup.py
db/: schema.sql
deployment/: Dockerfile  README.md
scripts/: run_local.py
tests/: conftest.py  test_graph.py  test_kill_switch.py  test_main.py  test_no_raw_interrupt.py  test_postgres_tools.py  test_runner.py
tests/agents/faq_agent/: test_faq_agent.py
tests/agents/house_search/: test_postgres_tools.py  test_state_schema.py
tests/platform/: test_graph_factory.py  test_harness.py  test_kill_switch.py
