[project]
name = "agent-demo"
version = "0.1.0"
description = "House search agent demo"
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "arize-otel>=0.13.0",
    "asyncpg>=0.31.0",
    "bedrock-agentcore>=1.18.1",
    "langchain-anthropic>=1.4.6",
    "langchain-mcp-adapters>=0.3.0",
    "langgraph>=1.2.5",
    "langgraph-checkpoint-mongodb>=0.4.0",
    "openinference-instrumentation-langchain>=0.1.67",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.22",
]

[dependency-groups]
dev = [
    "bedrock-agentcore-starter-toolkit>=0.3.10",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_demo"]
